<resources>
    <string name="app_name">Abastecimentos Veiculo</string>
    <string name="selecione_veiculo">"Veiculo: "</string>
    <string name="nome_posto">"Posto: "</string>
    <string name="data_abastecimento">"Data: "</string>
    <string name="km_atual">"Kilometragem Atual: "</string>
    <string name="combustivel">"Combustível: "</string>
    <string name="opcao_gasolina">Gasolina</string>
    <string name="opcao_etanol">Etanol</string>
    <string name="valor_total_pago">"Valor Total Pago: "</string>
    <string name="hint_data_abastecimento">Data do abastecimento.</string>
    <string name="hint_km_atual">KM Atual.</string>
    <string name="hint_valor_pago">Valor Pago.</string>
    <string name="cadastrar_abastecimento">Cadastrar Abastecimento</string>
    <string name="limpar_campos">Limpar Campos</string>
    <string name="litros">Litros Abastecidos:</string>
    <string name="quantidade_litros">"Quantidade de Litros: "</string>
    <string name="posto_petrobras">Posto Petrobrás</string>
    <string name="posto_ipiranga">Posto Ipiranga</string>
    <string name="posto_ale">Posto Ale</string>
    <string name="posto_shell">Posto Shell</string>
    <string name="posto_texaco">Posto Texaco</string>
    <string name="calibrado_pneus">"Calibrado Pneus: "</string>
    <string name="Gol">VW Gol</string>
    <string name="Uno">Fiat Uno</string>
    <string name="os_campos_foram_limpos">Os campos foram limpos!</string>
    <string name="penus_calibrados">"Penus calibrados: "</string>
    <string name="pneus_nao_calibrados">Pneus não calibrados</string>
    <string name="selecione_o_combustivel">Selecione o combustível!</string>
    <string name="preencha_data_do_abastecimento">Preencha data do abastecimento!</string>
    <string name="km_atual_invalida">KM atual inválida!</string>
    <string name="qtd_litros_invalida">Quantidade de litros inválida!</string>
    <string name="abastecimento_realizado_em">Abastecimento realizado em \"</string>
    <string name="foi_clicado">\"\nfoi clicado!</string>
    <string name="logo_da_utfpr">Logo da UTRPF</string>
    <string name="descricao_do_aplicativo">Aplicativo de Controle de Abastecimentos</string>
    <string name="autoria_app">Autor: <u><a href = "https://www.linkedin.com/in/pedrolopes1208">Pedro Cristovão Lopes Fogaça</a></u>></string>
    <string name="autoria_email"><u>pedrofogaca@alunos.utfpr.edu.br</u></string>
    <string name="autoria_curso">Especialização em Tecnologia Java</string>
    <string name="sobre">Sobre</string>
    <string name="controle_dos_abastecimentos">Controle dos Abastecimentos</string>
    <string name="adicionar">Adicionar</string>
    <string name="o_spinner_veiculo_nao_possui_valores">O Spinner veiculo não possui valores!</string>
    <string name="o_spinner_posto_nao_possui_valores">O Spinner Posto não possui valores!</string>
    <string name="valor_pago_invalido">Valor pago inválido!</string>
    <string name="nova_pessoa">Nova Pessoa</string>
    <string name="site_utfpr">www.utfpr.edu.br</string>
    <string name="nao_encontrado_app_para_abrir_site">Nenhum aplicativo para abrir páginas web foi encontrado!</string>
    <string name="nenhum_aplicativo_para_enviar_o_email">Nenhum aplicativo para enviar o email.</string>
    <string name="contato_pelo_aplicativo_controle_de_abastecimentos">Contato pelo Aplicativo Controle de Abastecimentos</string>
</resources>